# Fastapi

./: pyproject.toml
hello/: main.py
