[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
sqlmodel = "^0.0.22"
uvicorn = {extras = ["standard"], version = "^0.31.1"}

[tool.poetry.scripts]
dev = "hello.main:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
